
buildscript {
    repositories {
        mavenCentral()
        maven { url "https://oss.sonatype.org/content/groups/public"}
    }
}

plugins {
    id 'pl.allegro.tech.build.axion-release' version '1.13.4'
}

group 'com.github.rundeck-plugins'

apply plugin: 'pl.allegro.tech.build.axion-release'
apply plugin: 'groovy'
apply plugin: 'java'
apply plugin: 'maven-publish'

sourceCompatibility = 17
targetCompatibility = 17
ext.rundeckPluginVersion = '1.2'
ext.pluginClassNames='com.rundeck.plugin.HttpNotificationPlugin'
ext.pluginName = 'Http Notification'
ext.pluginDescription = 'A notification plugin that makes HTTP requests'


// Override version for Grails 7 upgrade
project.version = '1.0.13-grails7-upgrade-test'

configurations{
    //declare custom pluginLibs configuration to include only libs for this plugin
    pluginLibs

    //declare compile to extend from pluginLibs so it inherits the dependencies
    implementation{
        extendsFrom pluginLibs
    }
}

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        name = 'Central Portal Snapshots'
        url = 'https://central.sonatype.com/repository/maven-snapshots/'
        
        // Only search this repository for org.rundeck snapshots
        content {
            includeGroup('org.rundeck')
        }
    }
    maven { url 'https://jitpack.io' }

}

dependencies {
    implementation 'org.rundeck:rundeck-core:6.0.0-SNAPSHOT'

    pluginLibs ('com.github.rundeck-plugins:http-step:1.1.12-grails7-upgrade-test'){
        exclude group: 'org.rundeck', module: 'rundeck-core'
    }

    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.14'
    implementation 'org.apache.groovy:groovy-all:4.0.29'
    
    // Add secure commons-lang3 to provide alternative to vulnerable commons-lang 2.6
    implementation 'org.apache.commons:commons-lang3:3.18.0'

    testImplementation group: 'junit', name: 'junit', version: '4.13.2'

    testImplementation "org.apache.groovy:groovy-all:4.0.29"
    testImplementation "org.spockframework:spock-core:2.4-groovy-4.0"
    testImplementation "cglib:cglib-nodep:3.3.0"
    testImplementation 'org.objenesis:objenesis:1.4'

}

configurations.all {
    resolutionStrategy {
        // Replace vulnerable commons-lang with secure commons-lang3
        dependencySubstitution {
            substitute module('commons-lang:commons-lang') using module('org.apache.commons:commons-lang3:3.18.0')
        }
    }
}


// task to copy plugin libs to output/lib dir
task copyToLib(type: Copy) {
    into "$buildDir/output/lib"
    from configurations.pluginLibs
}



jar {
    from "$buildDir/output"
    manifest {
        def libList = configurations.pluginLibs.collect{'lib/' + it.name}.join(' ')
        attributes 'Rundeck-Plugin-Name' : pluginName
        attributes 'Rundeck-Plugin-Description' : pluginDescription
        attributes 'Rundeck-Plugin-Rundeck-Compatibility-Version': '2.10.1+'
        attributes 'Rundeck-Plugin-Tags': 'java,notification'
        attributes 'Rundeck-Plugin-License': 'Apache 2.0'
        attributes 'Rundeck-Plugin-Source-Link': 'https://github.com/rundeck-plugins/http-notification'
        attributes 'Rundeck-Plugin-Target-Host-Compatibility': 'all'
        attributes 'Rundeck-Plugin-Classnames': pluginClassNames
        attributes 'Rundeck-Plugin-File-Version': project.version
        attributes 'Rundeck-Plugin-Version': rundeckPluginVersion
        attributes 'Rundeck-Plugin-Archive': 'true'
        attributes 'Rundeck-Plugin-Libs': "${libList}"
    }
    dependsOn(copyToLib)
}


//set jar task to depend on copyToLib
jar.dependsOn(copyToLib)

tasks.withType(Test) {
    useJUnitPlatform()
    
    // Java 17+ module access
    jvmArgs = [
        '--add-opens=java.base/java.lang=ALL-UNNAMED',
        '--add-opens=java.base/java.util=ALL-UNNAMED',
        '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
        '--add-opens=java.base/java.net=ALL-UNNAMED'
    ]
}

publishing {
    publications {
        maven(MavenPublication) {
            artifactId = 'http-notification'
            from components.java
        }
    }
}
